--- a/aspnetcore/react_asp/ClientApp/package.json
+++ b/aspnetcore/react_asp/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-table": "^8.5.22",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
@@ -16,13 +17,13 @@
   "devDependencies": {
     "ajv": "^8.8.1",
     "cross-env": "^7.0.3",
-    "typescript": "^4.5.2",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
-    "nan": "^2.15.0"
+    "nan": "^2.15.0",
+    "typescript": "^4.5.2"
   },
   "eslintConfig": {
     "extends": "react-app"
